--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>To Do List</title>
 </head>
 <body>
+    <div class="container">
+        <input type="text" class="input-task" placeholder="O que fazer...">
+        <button class="button-add-task">Adicionar</button>
+        <ul class="list-tasks">
+
+        </ul>
+    </div>
     
 </body>
+<script src="scripts.js"></script>
 </html>
