--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <input type="text" class="input-task" placeholder="O que fazer...">
-        <button class="button-add-task">Adicionar</button>
+        <button class="button-add-task">Adicionar Tarefa</button>
         <ul class="list-tasks">
 
         </ul>
